# agent-skills

./: .gitattributes  .gitignore  README.md  install.ps1  install.py  install.sh  sync.sh
agents/: accessibility-audit.md  react-render-qa.md
agents/pr-bug-finder/: .env.example  README.md  main.py  prompts.py  pyproject.toml  schemas.py
commands/: find-bugs.md
config/: keybindings.json  settings.json.example  statusline.py
docs/: plane.md
hooks/: README.md  block-destructive-git.py  block-destructive-ops.py  enforce-worktree-paths.py  normalize-git-dash-c.py  prefer-dedicated-tools.py  reject-compound-bash.py  session-end-export.py
scripts/: _plane_helpers.py  plane-add-comment.py  plane-create-issue.py  plane-get-issue.py  plane-update-state.py
skills/: omarchy
skills/accessibility-audit/: SKILL.md
skills/accessibility-audit/references/: wcag-checklist.md
skills/agent-skills/: SKILL.md
skills/fix-develop/: SKILL.md
skills/init-repo/: SKILL.md
skills/owasp-top-10/: SKILL.md
skills/owasp-top-10/references/: owasp-checklist.md  runtime-checks.md  static-patterns.md
skills/powershell-expert/: SKILL.md
skills/powershell-expert/references/: best-practices.md  gui-development.md  powershellget.md
skills/pr-bug-finder/: SKILL.md
skills/recall/: SKILL.md  export_sessions.py
skills/recall/references/: SETUP.md  graph-template.html
skills/reflect/: SKILL.md
skills/release/: SKILL.md
skills/resolve-conflicts/: SKILL.md
skills/sdlc/: SKILL.md
skills/system-audit/: SKILL.md
skills/work-issue/: SKILL.md  launch.py
(+7 files in other folders)
