[project]
name = "pr-bug-finder"
version = "0.1.0"
description = "Adversarial PR bug-finding agent using competing Sonnet subagents"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk",
]

[tool.setuptools]
py-modules = ["main", "prompts", "schemas"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
